--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "mocha": "^8.3.0"
   },
   "dependencies": {
+    "jsdom": "^16.5.1",
     "leanix-js": "^0.2.1",
+    "mxgraph": "^4.2.2",
+    "node-fetch": "^2.6.1",
     "xml2js": "^0.4.23"
   }
 }
